--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <title>To Do List App - Hac.D5</title>
   <link rel="stylesheet" href="style.css">
+      <link rel="icon" href="favicon.png" type="image/png">
 </head>
 
 <body>
