--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <h2>To-Do List <img src="icon.svg" alt="Logo"></h2>
       <div class="row">
         <input type="text" id="input-box" placeholder="Add your task">
+        <button onclick="AddTask()">add</button>
       </div>
       <ul id="list-container">
         <!-- List items will appear here -->
